2006-07-12  Scott Ellington  <scott.ellington@gmail.com> 

	* SolutionDeployer.cs: 
	* templates/package.pc.template: 
	add Libraries variable

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* Handler.cs: Track changes in the deployment api.
	* MonoDevelop.Autotools.addin.xml: Updated versions.

2006-06-28  Scott Ellington  <scott.ellington@gmail.com> 

	* Makefile.cs: can append values to variables
	* SolutionDeployer.cs: implement pkgconfig stuff
	* MonoDevelop.Autotools.addin.xml: add option panel and store pref
	* templates/package.pc.template: template for pc file
	* Makefile.am: add new files
	* SolutionOptionsPanel.cs: new option panel

2006-06-28  Lluis Sanchez Gual  <lluis@novell.com>

	* TarballTargetEditorWidget.cs: Added null check. Fix the build for
	  gtk# 2.4.

2006-06-20  Scott Ellington  <scott.ellington@gmail.com> 

	* AutotoolsContext.cs:
	* templates/Makefile.am.project.template:
	* SimpleProjectMakefileHandler.cs: copy resources outside of
	autotools hierarchy into project directory
	* templates/Makefile.include: include files of 
	BuildAction.Nothing in distribution

2006-06-19  Scott Ellington  <scott.ellington@gmail.com> 

	* SimpleProjectMakefileHandler.cs: 
	* AutotoolsContext.cs: 
	* SolutionDeployer.cs: 
	use the new CombineEntry.Version property
	* TarballTargetEditorWidget.cs: default to active config

2006-06-16  Scott Ellington  <scott.ellington@gmail.com> 

	* SolutionDeployer.cs: Deploy and GenerateFiles can now
	take a configuration parameter
	* Makefile.am: added new file.
	* TarballTargetEditorWidget.cs:
	* Handler.cs:
	Add option to set a default configuration at deployment.

2006-06-15  Scott Ellington  <scott.ellington@gmail.com> 
	
	* SolutionDeployer.cs: always run autogen.sh on Deploy
	* templates/Makefile.include: clean up

2006-06-15  Scott Ellington  <scott.ellington@gmail.com> 

	* SimpleProjectMakefileHandler.cs:
	* templates/exe.wrapper.in.template:
	pass runtime parameters on to exe wrapper
	* Handler.cs: