@@ -1,3 +1,8 @@
+2006-07-17 Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* SimpleProjectMakefileHandler.cs: Track changes in the SystemAssemblyService
+	  class.
+
 2006-07-12  Scott Ellington  <scott.ellington@gmail.com> 
 
 	* SolutionDeployer.cs: 
